--- a/manifest.json
+++ b/manifest.json
@@ -1,136 +1,29 @@
 {
     "name": "Caret-T",
     "description": "Professional text editing for Chrome and Chrome OS",
-    "version": "1.4.15",
+    "version": "1.4.158",
     "manifest_version": 2,
     "icons": {
-        "128": "icon-128.png"
-    }, 
+        "128": "icon-128-inverted.png"
+    },
     "app": {
         "background": {
-            "scripts": [
-                "background.js",
-                "installer.js"
-            ]
+            "scripts": ["background.js", "installer.js"]
         }
     },
     "sandbox": {
         "pages": ["sandbox.html"]
     },
-    "permissions": [
-        "clipboardRead",
-        "clipboardWrite",
-        "contextMenus",
-        "storage",
-        "notifications",
-        "syncFileSystem", {
-            "fileSystem": [
-                "write",
-                "retainEntries",
-                "directory"
-            ]
-        }
-    ],
+    "permissions": ["clipboardRead", "clipboardWrite", "contextMenus", "storage", "notifications", "syncFileSystem", {
+        "fileSystem": ["write", "retainEntries", "directory"]
+    }],
     "kiosk_enabled": false,
     "offline_enabled": true,
     "file_handlers": {
         "text": {
-            "extensions": [
-                "as",
-                "as3",
-                "asm",
-                "bat",
-                "c",
-                "caret-project",
-                "cc",
-                "cfc",
-                "cfm",
-                "cgi",
-                "coffee",
-                "conf",
-                "cpp",
-                "cs",
-                "csh",
-                "css",
-                "csv",
-                "dart",
-                "diff",
-                "do",
-                "ejs",
-                "el",
-                "erb",
-                "glsl",
-                "go",
-                "h",
-                "haml",
-                "handlebars",
-                "haxe",
-                "hs",
-                "htm",
-                "html",
-                "htmls",
-                "ini",
-                "jade",
-                "java",
-                "js",
-                "json",
-                "ksh",
-                "less",
-                "log",
-                "love",
-                "lua",
-                "m",
-                "make",
-                "man",
-                "manifest",
-                "markdown",
-                "mat",
-                "md",
-                "mdoc",
-                "me",
-                "micro",
-                "obc",
-                "patch",
-                "php",
-                "pkb",
-                "pkg",
-                "pks",
-                "pl",
-                "pls",
-                "pm",
-                "ps",
-                "py",
-                "r",
-                "rake",
-                "rb",
-                "sass",
-                "scala",
-                "scss",
-                "sh",
-                "shtml",
-                "sql",
-                "styl",
-                "svg",
-                "tex",
-                "text",
-                "ts",
-                "tsv",
-                "txt",
-                "vbs",
-                "vcf",
-                "xml",
-                "yaml",
-                "yml",
-                "zsh"
-            ],
+            "extensions": ["as", "as3", "asm", "bat", "c", "caret-project", "cc", "cfc", "cfm", "cgi", "coffee", "conf", "cpp", "cs", "csh", "css", "csv", "dart", "diff", "do", "ejs", "el", "erb", "glsl", "go", "h", "haml", "handlebars", "haxe", "hs", "htm", "html", "htmls", "ini", "jade", "java", "js", "json", "ksh", "less", "log", "love", "lua", "m", "make", "man", "manifest", "markdown", "mat", "md", "mdoc", "me", "micro", "obc", "patch", "php", "pkb", "pkg", "pks", "pl", "pls", "pm", "ps", "py", "r", "rake", "rb", "sass", "scala", "scss", "sh", "shtml", "sql", "styl", "svg", "tex", "text", "ts", "tsv", "txt", "vbs", "vcf", "xml", "yaml", "yml", "zsh"],
             "title": "Caret-T",
-            "types": [
-                "application/javascript",
-                "application/json",
-                "application/x-shellscript",
-                "application/xml",
-                "text/*"
-            ]
+            "types": ["application/javascript", "application/json", "application/x-shellscript", "application/xml", "text/*"]
         }
     }
 }
