--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Caret-T",
-    "description": "Professional text editing for Chrome and Chrome OS",
+    "description": "Fork of Caret Editor that has full Tern integration (Intellisense for Javascript)",
     "version": "1.6.710",
     "manifest_version": 2,
     "icons": {
