--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Caret-T",
     "description": "Fork of Caret Editor that has full Tern integration (Intellisense for Javascript)",
-    "version": "1.7.114",
+    "version": "1.7.115",
     "manifest_version": 2,
     "icons": {
         "128": "icon-128-inverted.png"
@@ -14,7 +14,13 @@
     "sandbox": {
         "pages": ["sandbox.html"]
     },
-    "permissions": ["clipboardRead", "clipboardWrite", "contextMenus", "storage", "notifications", "syncFileSystem", {
+    "webview": {
+        "partitions": [{
+            "name": "sandbox",
+            "accessible_resources": ["*.js", "*.html"]
+        }]
+    },
+    "permissions": ["webview", "clipboardRead", "clipboardWrite", "contextMenus", "storage", "notifications", "syncFileSystem", {
         "fileSystem": ["write", "retainEntries", "directory"]
     }, "*://*/*"],
     "kiosk_enabled": false,
